Rollback to Java 1.8