@@ -8,6 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
+import java.util.Collections;
 import java.util.Set;
 
 @ControllerAdvice
@@ -19,7 +20,7 @@ public class SecurityRelatedExceptionsHandler {
         ExceptionDto exceptionDto = new ExceptionDto("authenticationException", e.getMessage());
 
         ResponseWithExceptionsDto responseDto = new ResponseWithExceptionsDto();
-        responseDto.setExceptions(Set.of(exceptionDto));
+        responseDto.setExceptions(Collections.singleton(exceptionDto));
 
         return new ResponseEntity<>(responseDto, HttpStatus.UNAUTHORIZED);
     }
